# routes/api.php
@@ -28,6 +28,8 @@ Route::middleware('auth:api')->group(function () {
 // Appointments
 Route::middleware('auth:api')->group(function () {
     Route::get('/appointments', [AppointmentController::class, 'index']);
+    Route::get('/appointments/{id}', [AppointmentController::class, 'show']);
+    Route::get('/appointments/doctor/{doctor_id}', [AppointmentController::class, 'getAppointmentsByDoctor']);
     Route::post('/appointments', [AppointmentController::class, 'store']);
 });
 
